Added footer style

--- a/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
+++ b/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
@@ -1,4 +1,9 @@
 $bodyFontFamily: 'Orkney', sans-serif;
 
-//header
+
+//global
+$headingColor: #fff;
+
+//layouts
 $linkColor: #fff;
+$textColor: #b0b0b0;
