--- a/wordpress/wp-content/themes/architecture/scss/base/_base.scss
+++ b/wordpress/wp-content/themes/architecture/scss/base/_base.scss
@@ -17,3 +17,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $bodyFontFamily;
   font-weight: normal;
 }
+
+p {
+  font-family: $bodyFontFamily;
+  font-weight: normal;
+}
