Added hero section

--- a/wordpress/wp-content/themes/architecture/scss/layouts/_footer.scss
+++ b/wordpress/wp-content/themes/architecture/scss/layouts/_footer.scss
@@ -45,11 +45,13 @@
   .bottom-content {
     display: flex;
     padding: 2rem 0 8rem;
+    justify-content: space-between;
 
     .copy-right {
 
       p {
         font-size: .85rem !important;
+        color: $textColor;
       }
     }
   }
