--- a/wordpress/wp-content/themes/architecture/style.css
+++ b/wordpress/wp-content/themes/architecture/style.css
@@ -22,6 +22,7 @@ a {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Orkney", sans-serif;
   font-weight: normal;
+  margin: 0;
 }
 
 p {
@@ -88,14 +89,21 @@ p {
   display: -ms-flexbox;
   display: flex;
   padding: 2rem 0 8rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .site-footer .bottom-content .copy-right p {
   font-size: .85rem !important;
+  color: #b0b0b0;
 }
 
 .site-header {
-  height: 5vh;
+  height: 10vh;
+  width: 100%;
+  z-index: 200;
+  position: fixed;
 }
 
 .site-header .header-wrapper {
@@ -107,12 +115,12 @@ p {
           justify-content: space-between;
 }
 
-.site-header .header-wrapper .site-branding h1 {
-  text-transform: uppercase;
+.site-header .header-wrapper .site-branding {
+  line-height: 10vh;
 }
 
-.site-header .header-wrapper .main-navigation {
-  line-height: 5vh;
+.site-header .header-wrapper .site-branding h1 {
+  text-transform: uppercase;
 }
 
 .site-header .header-wrapper .main-navigation .menu-toggle {
@@ -124,14 +132,77 @@ p {
   display: -ms-flexbox;
   display: flex;
   list-style: none;
+  line-height: 10vh;
 }
 
 .site-header .header-wrapper .main-navigation .nav-menu .page_item {
-  padding-right: 10px;
+  padding-right: 20px;
 }
 
 .site-header .header-wrapper .main-navigation .nav-menu .page_item a {
   text-decoration: none;
   text-transform: uppercase;
+  font-weight: normal;
+}
+
+.hero {
+  height: 100vh;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
+}
+
+.hero .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hero .hero-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 15rem 0 0;
+}
+
+.hero .hero-wrapper .hero-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  z-index: 100;
+}
+
+.hero .hero-wrapper .hero-content h3 {
+  color: #fff;
+  text-align: center;
+  text-shadow: 2px 2px 9px #000000;
+}
+
+.hero .hero-wrapper .hero-content h1 {
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 1.4;
+  margin-top: 2rem;
+  text-shadow: 2px 2px 9px #000000;
+}
+
+.hero .hero-wrapper .hero-content p {
+  text-align: center;
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
