--- a/wordpress/wp-content/themes/architecture/scss/pages/home/sections/_hero.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/home/sections/_hero.scss
@@ -15,9 +15,10 @@
 
   .hero-wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 15rem 0 0;
+    padding: 20rem 0 0;
 
     .hero-content {
       display: flex;
@@ -27,22 +28,76 @@
       h3 {
         color: $headingColor;
         text-align: center;
-        text-shadow: 2px 2px 9px #000000;
+        text-shadow: 1px 1px 6px #000000;
+        font-size: 1.5rem;
       }
 
       h1 {
         color: $headingColor;
         text-align: center;
         font-weight: bold;
-        font-size: 72px;
         line-height: 1.4;
         margin-top: 2rem;
-        text-shadow: 2px 2px 9px #000000;
+        text-shadow: 1px 1px 10px #000000;
+
+        @include breakpoint(desktop) {
+          font-size: 3vw;
+        }
       }
 
       p {
         text-align: center;
-        color: $headingColor;
+        color: $textColor;
+        line-height: 1.4;
+      }
+    }
+
+    .hero-btn {
+      margin-top: 2rem;
+
+      a {
+        padding: .8rem 1.2rem;
+        border: 1px solid $borderColor;
+        position: relative;
+        text-transform: uppercase;
+        font-size: .8rem;
+        letter-spacing: 2px;
+
+        &:hover {
+          background-color: $hoverBg;
+          color: $hoverTextColor;
+          transition: color .2s ease-in, background-color .2s ease-in;
+        }
+
+        &:hover::after {
+          background-color: $hoverTextColor;
+        }
+
+        &:hover::before {
+          background-color: $hoverTextColor;
+        }
+
+        &::after {
+          content: '';
+          height: 1px;
+          width: 20px;
+          position: absolute;
+          right: -8%;
+          top: 50%;
+          background-color: $borderColor;
+          z-index: 20;
+        }
+
+        &::before {
+          content: '';
+          z-index: 20;
+          height: 1px;
+          width: 20px;
+          position: absolute;
+          left: -8%;
+          top: 50%;
+          background-color: $borderColor;
+        }
       }
     }
   }
