--- a/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
+++ b/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
@@ -3,7 +3,12 @@ $bodyFontFamily: 'Orkney', sans-serif;
 
 //global
 $headingColor: #fff;
+$borderColor: #fff;
 
 //layouts
 $linkColor: #fff;
 $textColor: #b0b0b0;
+
+$hoverTextColor: #000;
+$hoverBg: #fff;
+
