Added about section

--- a/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
+++ b/wordpress/wp-content/themes/architecture/scss/variables/_variables.scss
@@ -7,8 +7,10 @@ $borderColor: #fff;
 
 //layouts
 $linkColor: #fff;
-$textColor: #b0b0b0;
+$textColor: #7e7d7d;
 
 $hoverTextColor: #000;
 $hoverBg: #fff;
 
+// sections
+$sectionHeadingColor: #000;
