--- a/wordpress/wp-content/themes/architecture/scss/pages/home/_home.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/home/_home.scss
@@ -1,3 +1,7 @@
 //sections
 @import './sections/hero';
 @import './sections/about';
+@import './sections/projects';
+
+
+@import './components/buttons';
