--- a/wordpress/wp-content/themes/architecture/scss/pages/home/sections/_about.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/home/sections/_about.scss
@@ -5,7 +5,7 @@
     padding: 8rem 0;
 
     .left-part-about {
-      flex-basis: 30%;
+      flex-basis: 35%;
       background-image: url('./assets/about.jpg');
       background-position: center center;
       background-size: cover;
@@ -31,8 +31,8 @@
     }
 
     .right-part-about {
-      flex-basis: 70%;
-      padding-left: 4rem;
+      flex-basis: 65%;
+      padding-left: 2rem;
 
       h2 {
         font-size: 1.3rem;
@@ -49,6 +49,7 @@
       p {
         line-height: 1.5;
         color: $textColor;
+        padding-bottom: 2rem;
       }
     }
   }
