--- a/wordpress/wp-content/themes/architecture/scss/pages/home/sections/_hero.scss
+++ b/wordpress/wp-content/themes/architecture/scss/pages/home/sections/_hero.scss
@@ -4,6 +4,22 @@
   background-size: cover;
   position: relative;
 
+  @include breakpoint(mobile) {
+    padding: 0 2rem;
+  }
+
+  @include breakpoint(smallTablet) {
+    padding: 0 3rem;
+  }
+
+  @include breakpoint(tablet) {
+    padding: 0 5rem;
+  }
+
+  @include breakpoint(laptop) {
+    padding: 0;
+  }
+
   .overlay {
     position: absolute;
     top: 0;
